--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <header class="newarea">
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
